# cmake-blank-project-template

./: CMakeLists.txt
app/: CMakeLists.txt
app/src/: main.cpp
cmake/: group_filter.cmake
