set(EXECUTABLE_NAME app)

add_executable(${EXECUTABLE_NAME})

file(GLOB_RECURSE SOURCES src/*)
file(GLOB_RECURSE RESOURCES res/*)

target_sources(${EXECUTABLE_NAME} PRIVATE ${SOURCES} PRIVATE ${RESOURCES})
target_link_libraries(${EXECUTABLE_NAME} PRIVATE library)

if(MSVC)
  set_property(DIRECTORY ${CMAKE_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${EXECUTABLE_NAME})
  set_property(TARGET ${EXECUTABLE_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/$<CONFIG>")
  group_filter(${EXECUTABLE_NAME})
endif()

set_target_properties(${EXECUTABLE_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/$<CONFIG>")


